--- a/graficas/package.json
+++ b/graficas/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "canvasjs-react-charts": "^1.0.5",
     "chart.js": "^2.9.4",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-border-wrapper": "^1.0.3",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
