--- a/grpc/server/Dockerfile
+++ b/grpc/server/Dockerfile
@@ -1,18 +1,21 @@
 # Dockerfile References: https://docs.docker.com/engine/reference/builder/
 
 # Start from golang:1.12-alpine base image
-FROM golang:1.12-alpine
+FROM golang
+#:1.12-alpine
 
 # The latest alpine images don't have some tools like (`git` and `bash`).
 # Adding git, bash and openssh to the image
-RUN apk update && apk upgrade && \
-    apk add --no-cache bash git openssh
+#RUN apk update && apk upgrade && \
+#    apk add --no-cache bash git openssh
 
 
 # Set the Current Working Directory inside the container
 WORKDIR /app
 
-RUN go mod download
+RUN go mod init github.com/sgleal97/proyecto2_grupo11_so1
+RUN go get github.com/go-redis/redis/v8
+#RUN go mod download
 RUN go get github.com/golang/protobuf/proto
 RUN go get github.com/gorilla/mux
 RUN go get golang.org/x/net/http2
@@ -22,8 +25,7 @@ RUN go get google.golang.org/protobuf/cmd/protoc-gen-go
 RUN go get google.golang.org/grpc/cmd/protoc-gen-go-grpc
 RUN go get go.mongodb.org/mongo-driver/mongo
 # Probar
-RUN go mod init github.com/sgleal97/proyecto2_grupo11_so1
-RUN go get github.com/go-redis/redis/v8
+
 
 
 # Copy the source from the current directory to the Working Directory inside the container
