--- a/APIDummy/dummy.yaml
+++ b/APIDummy/dummy.yaml
@@ -42,29 +42,29 @@ spec:
         app: blue
     spec:
       containers:
-      - image: sgleal97/client-go-grpc
+      - image: sgleal97/clientego
         name: blue
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: blue2
-  name: blue2
+    app: servergrpc
+  name: servergrpc
   namespace: project
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: blue2
+      app: servergrpc
   template:
     metadata:
       labels:
-        app: blue2
+        app: servergrpc
     spec:
       containers:
-      - image: sgleal97/server-go-grpc
-        name: blue2
+      - image: sgleal97/grpcgoserver
+        name: servergrpc
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -91,22 +91,22 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: green2
-  name: green2
+    app: subredis
+  name: subredis
   namespace: project
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: green2
+      app: subredis
   template:
     metadata:
       labels:
-        app: green2
+        app: subredis
     spec:
       containers:
-      - image: sandraeu/goredissub
-        name: green2
+      - image: sandraeu/redissubgo
+        name: subredis
 ---
 apiVersion: v1
 kind: Service
@@ -142,8 +142,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: blue2
-  name: blue2
+    app: servergrpc
+  name: servergrpc
   namespace: project
 spec:
   ports:
@@ -151,7 +151,7 @@ spec:
     protocol: TCP
     targetPort: 50051
   selector:
-    app: blue2
+    app: servergrpc
 ---
 apiVersion: v1
 kind: Service
